repr-trait/test/c_fail.rs
use repr_trait::C;

#[derive(C)]
struct NotC {
}

fn main() {}
